// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<TableBody /> should render component while fetching 1`] = `
<tbody>
  <tr>
    <td
      colSpan={100}
    >
      <div
        className="fetch-info"
      >
        <img
          alt="loader"
          src="test-file-stub"
          width={30}
        />
      </div>
    </td>
  </tr>
</tbody>
`;

exports[`<TableBody /> should render component with data 1`] = `
<tbody>
  <tr>
    <td>
      <button>
        Edit
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button>
        Edit
      </button>
    </td>
  </tr>
</tbody>
`;

exports[`<TableBody /> should render component with data 2`] = `
<tbody>
  <tr>
    <td>
      <button>
        Edit
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button>
        Edit
      </button>
    </td>
  </tr>
</tbody>
`;

exports[`<TableBody /> should render component with data, with toggled tooltip 1`] = `
<tbody>
  <tr>
    <td>
      <button>
        Edit
      </button>
    </td>
  </tr>
  <tr>
    <td>
      <button>
        Edit
      </button>
    </td>
  </tr>
</tbody>
`;

exports[`<TableBody /> should render component with error 1`] = `
<tbody>
  <tr>
    <td
      colSpan={100}
    >
      <div
        className="fetch-info"
      >
        Error while fetching data
      </div>
    </td>
  </tr>
</tbody>
`;

exports[`<TableBody /> should render component with no data 1`] = `
<tbody>
  <tr>
    <td
      colSpan={100}
    >
      <div
        className="fetch-info"
      >
        Not found
      </div>
    </td>
  </tr>
</tbody>
`;
